Change React version, use stand alone prop-types, use react-redux to get Provider

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/expect/1.20.2/expect.js"></script>
   <script src="https://wzrd.in/standalone/deep-freeze@latest"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.js"></script>
-  <script src="https://fb.me/react-with-addons-15.1.0.js"></script>
-  <script src="https://fb.me/react-dom-15.1.0.js"></script>
-  <script src="https://fb.me/react-15.1.0.js"></script>
+  <script src="https://fb.me/react-with-addons-15.3.0.js"></script>
+  <script src="https://fb.me/react-dom-15.3.0.js"></script>
+  <script src="https://fb.me/react-15.3.0.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/5.0.6/react-redux.js"></script>
+  <script src="https://unpkg.com/prop-types/prop-types.js"></script>
 </head>
 <body>
   <div id="root"></div>
